--- a/package.json
+++ b/package.json
@@ -4,19 +4,34 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start",
+    "start": "ts-node-dev ./src/index.ts",
+    "dev": "webpack-dev-server --inline --hot",
+    "build": "webpack -p"
   },
   "author": "Walesson",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "http-status-codes": "^2.3.0",
+    "tsc-init": "^2.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jasmine": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "eslint": "^8.57.0",
+    "jasmine-core": "^5.1.2",
+    "karma": "^6.4.3",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-jasmine": "^5.1.0",
+    "karma-webpack": "^5.0.1",
+    "ts-loader": "^9.5.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "webpack": "^5.90.3",
+    "webpack-dev-server": "^5.0.2"
   }
 }
