--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
-    "tsc-init": "^2.1.0"
+    "tsc-init": "^2.1.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
